Changes with Apache 1.3.13

  *) Correct mod_proxy Win32 garbage collection bug (clean failing
     due to stat() against directory).
     PR: 1891, 3278, 4139, 5997
     [Michael Friedel <mfriedel@lbell.slctnet.com>]

  *) Add '-n' option to htpasswd to make it print its user:pw record
     on stdout rather than having to frob a text file.  [Ken Coar]

  *) Set default ServerName setting to 127.0.0.1 for the Windows
     config file (httpd.conf-dist-win)
     PR: 5509, 5783, 5953, 5903, 5983, 5259, 5515, 5858
     [Oliver Wendemuth <owendemuth@ko.hbv.de>]

  *) [EBCDIC] Update mod_mmap_static so that an ebcdic box can use 
     MMapFile for files that shouldn't be converted from ebcdic->ascii.
     [Greg Ames <gregames@us.ibm.com>]

  *) Revamp the Win32 make environment. Apache.dsw created to bring 
     together all the pieces. Create new file os/win32/BaseAddr.ref 
     to define module base addresses (to prevent dll relocation at 
     start-up).  Extraneous compiler files were removed (precompiled
     headers, incremental link images), and .map files were added
     for consistent diagnostics of gpfaults of the binary release.
     [William Rowe, Greg Marr, Tim Costello, Bill Stoddard]

  *) Resolved Win32 mod_info (ApacheModuleInfo.dll) errors.
     PR1442, PR2472, PR4125, PR1643 and PR2208
     Jim Patterson, Jan Just Keijser <KEIJSERJJ@logica.com>

  *) Add some more error reporting to htpasswd in the case of problems
     generating or accessing the temporary file.  Also, pass in a
     buffer if the implementation knows how to use it (i.e., if L_tmpnam
     is defined).  [Ken Coar]  PR#3945, 5253, 5383, 5558

  *) PORT: Add recognition of the GNU/Hurd platform.
     [Adam Farrell <skate111@stampede.org>]

  *) More FAQs and answers from comp.infosystems.www.servers.unix.
     [Joshua Slive <slive@finance.commerce.ubc.ca>]

  *) Win32: Add dependency checking to the CreateService call to ensure 
     TCPIP and AFP (winsock) are started before Apache.